--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,7 +7,6 @@
 
 
     <!-- Strings related to login issues -->
-    <string name="connecting_to_devices">Conectando con dispositivos</string>
     <string name="device_found">conectado</string>
     <string name="waiting_for_data">Esperando datos</string>
 
@@ -22,19 +21,15 @@
 
 
     <!-- Strings related to Readings -->
-    <string name="readings_title">Datos en tiempo real</string>
 
     <!-- Readings -->
 
-    <string name="reading_respiratory_rate">Frecuencia respiratoria</string>
     <string name="reading_pm10">PM 10</string>
     <string name="reading_pm2_5">PM 2.5</string>
 
     <string name="reading_pm1_0">PM 1.0</string>
     <string name="reading_temp">Temperatura</string>
     <string name="reading_rel_humidity">Humedad</string>
-    <string name="reading_o3">O3</string>
-    <string name="reading_no2">NO2</string>
     <string name="reading_bins">Bins total</string>
 
     <!-- Reading unit -->
@@ -49,9 +44,9 @@
     <!-- Strings related to Menus -->
 
     <!-- Button/tabs menu -->
-    <string name="menu_home">INICIO</string>
-    <string name="menu_air_quality">CALIDAD DEL AIRE</string>
-    <string name="menu_aq_graphs">GRÁFICAS</string>
+    <string name="menu_subject">INICIO</string>
+    <string name="menu_airspeck_readings">CALIDAD DEL AIRE</string>
+    <string name="menu_airspeck_graphs">GRÁFICAS</string>
 
     <!-- Action Bar menu -->
     <string name="action_supervised_mode">Modo supervisado</string>
