--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,13 @@
 
     <string name="menu_pulseox">Pulseox Readings</string>
 
+    <string name="menu_airspeck_subgroup">Airspeck</string>
+    <string name="menu_respeck_subgroup">RESpeck</string>
+    <string name="menu_pulseox_subgroup">Pulseox</string>
+    <string name="menu_other_subgroup">Others</string>
+
+
+
     <!-- Action Bar menu -->
     <string name="action_supervised_mode">Supervised mode</string>
     <string name="action_subject_mode">Subject mode</string>
@@ -265,5 +272,10 @@
     <string name="airspeck_power_off_message">This action turns off the air pollution monitor. You can turn it back
         on by pressing the power button on the device next to the white lamp.\n
         यह क्रिया वायु प्रदूषण मॉनिटर को बंद कर देती है आप उसे सफेद दीपक के बगल में डिवाइस पर पावर बटन दबाकर इसे वापस चालू कर सकते हैं।</string>
+
+    <string name="connection_text_both_devices">Connecting to devices</string>
+    <string name="connection_text_respeck_only">Connecting to RESpeck</string>
+    <string name="connection_text_airspeck_only">Connecting to Airspeck</string>
+    <string name="connection_text_pulseox_only">Connecting to Pulseox</string>
 
 </resources>
