Combined indoor outdoor logging with activity logging.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,11 +65,11 @@
 
     <string name="menu_activity_summary">Activity Summary</string>
     <string name="menu_respeck_readings">RESpeck Readings</string>
-    <string name="menu_activity_logging_respeck">RESpeck Activity Logging</string>
+    <string name="menu_activity_logging">Activity Logging</string>
     <string name="menu_activity_raw_accel_respeck">RESpeck Acceleration Data</string>
     <string name="menu_respeck_demo">RESpeck Demo</string>
 
-    <string name="menu_inout_prediction">Indoor Prediction</string>
+    <string name="menu_inout_prediction">Indoor Prediction Testing</string>
 
     <string name="menu_pulseox">Pulseox Readings</string>
 
