--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -274,6 +274,10 @@
     key is used to encrypt all recorded data, so that no one can view or modify the data before it is uploaded
     to the server. Note that you need a network connection for this operation.</string>
 
+    <string name="respeck_pause_message">This action pauses the breathing recording. Use this before you take off the
+        device for a shower or a similar activity. Start the recording again after you put the RESpeck back on.\n
+    </string>
+
     <string name="airspeck_power_off_message">This action turns off the air pollution monitor. You can turn it back
         on by pressing the power button on the device next to the white lamp.\n
         यह क्रिया वायु प्रदूषण मॉनिटर को बंद कर देती है आप उसे सफेद दीपक के बगल में डिवाइस पर पावर बटन दबाकर इसे वापस चालू कर सकते हैं।</string>
