--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="menu_respeck_demo">RESpeck Demo</string>
 
     <string name="menu_inout_prediction">Indoor Prediction Testing</string>
+    <string name="menu_coughing">Coughing Test</string>
 
     <string name="menu_pulseox">Pulseox Readings</string>
 
