--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,6 +95,7 @@
     <string name="action_close_app">Close app</string>
     <string name="action_check_for_updates">Check for updates</string>
     <string name="action_view_config">Pairing info</string>
+    <string name="action_view_battery">Battery info</string>
 
     <!-- Volume recording -->
     <string name="title_activity_volume_recording">Volume recording</string>
