--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="botnav_actsum">Summary</string>
     <string name="botnav_liveact">Live Activity</string>
     <string name="botnav_home">Home</string>
-    <string name="botnav_diary">Diary</string>
+    <string name="botnav_settings">Settings</string>
     <string name="botnav_rehab">Rehab</string>
 
     <!-- Subject's Act Sum DayWeek Nav Menu -->
